--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: rondo_flutter_common
 description: A new Flutter package.
 version: 0.0.1
-author:
-homepage:
+author: ikecoolon@hotmail.com
+homepage: https://github.com/ikecoolon/rondo-flutter-common.git
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -19,6 +19,8 @@ dependencies:
   connectivity: ^0.4.2+1
   # 获取设备信息
   device_info: ^0.4.0+2
+  #获取版本号
+  package_info: ^0.4.0+2
   # 本地存储
   shared_preferences: ^0.5.6+3
   # 事件总线
@@ -29,6 +31,16 @@ dependencies:
   flutter_webview_plugin: ^0.3.10+1
   # 状态管理
   flutter_redux: ^0.5.2
+  #  扫码插件
+  qr_code_scanner: 0.0.13
+  # 弹窗
+  toast: ^0.1.3
+  # 不同屏幕尺寸兼容工具
+  flutter_screenutil: ^0.4.2
+  # 高德地图
+  amap_all_fluttify: ^0.17.0
+  # 占位符
+  shimmer: ^1.0.0
   # 加密算法库
   pointycastle: ^1.0.1
   cryptoutils: ^0.4.0
